# desertcar

./: .gitignore  .wranglerignore  Cargo.toml  README.md  build.sh  index.html  wrangler.toml
assets/audio/: overworld-lofi-random-commands.md
assets/gltf/: buggy.gltf  car-in-desert.gltf  desert-car.glb  desert-car.gltf  desertcar.gltf
blend/: buggy.blend  buggy.blend1  buggy.gltf  car-in-desert.blend  desert-car.blend  desertcar.blend
src/: assets.rs  buggy.rs  camera.rs  car.rs  input.rs  lighting.rs  main.rs  movement.rs  physics.rs  scene.rs  setup.rs  state.rs  theme.rs
