[package]
name = "desert-car"
version = "0.1.0"
publish = false
authors = ["shnewto<github@shnewto.com>"]
edition = "2021"

[features]
default = [
    "bevy_kira_audio/ogg",
]

dev = [
    "bevy/dynamic"
]

[dependencies]
smooth-bevy-cameras = "0.4.0"
bevy_rapier3d = "0.13.0"
bevy_kira_audio = "0.10.0"
bevy = { version = "0.7" }
leafwing-input-manager = "0.4.1"
