[package]
name = "desert-car"
version = "0.1.0"
publish = false
authors = ["shnewto<github@shnewto.com>"]
edition = "2021"

[dependencies]
smooth-bevy-cameras = { version = "0.6.0", git = "https://github.com/bonsairobo/smooth-bevy-cameras/", rev = "1388352469519b1451cd85482c46c8a4252440e7" }
bevy_rapier3d = "0.19.0"
bevy_kira_audio = "0.13.0"
bevy = "0.9"
leafwing-input-manager = "0.7.0"