[package]
name = "desert-car"
version = "0.2.0"
publish = false
authors = ["shnewto<github@shnewto.com>"]
edition = "2024"

[dependencies]
bevy_kira_audio = "0.24"
bevy_rapier3d = "0.32"
leafwing-input-manager = "0.19.0"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras", rev = "0082938368d7f5bcc02a188caf63ff67df77e031" }

[dependencies.bevy]
version = "0.17"

[profile.release]
opt-level = "s"     # Optimize for size (less aggressive than "z")
lto = "fat"         # Link-time optimization
codegen-units = 1   # Better optimization, slower compile
strip = "symbols"   # Strip symbols
